# LLMOpsForge

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN_TRADEOFFS.md  Dockerfile  EVALS.md  Makefile  README.md  REGRESSION_TESTING.md  docker-compose.yml  pyproject.toml
app/: __init__.py  cli.py  config.py  logging_config.py  main.py
app/api/: routes.py  schemas.py
app/evals/: adapters.py  judge.py  metrics.py  regression.py  reports.py  runner.py
app/providers/: base.py  factory.py  mock.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
app/rag/: chunker.py  citations.py  embeddings.py  generator.py  loader.py  pipeline.py  retriever.py
app/storage/: database.py  models.py  repository.py
configs/: default.yaml  model_configs.yaml  prompt_v1.yaml  prompt_v2.yaml  prompt_v2_eval.yaml
dashboard/: streamlit_app.py
datasets/: qa_eval.jsonl
documents/: api_docs.md  onboarding_guide.md  pricing_policy.md  product_security.md  refund_policy.md
tests/: conftest.py  test_adapters.py  test_api.py  test_chunker.py  test_cli.py  test_e2e.py  test_judge.py  test_loader.py  test_metrics.py  test_mock_provider.py  test_pipeline.py  test_reports.py  test_retriever.py  test_runner_regression.py
