[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmopsforge"
version = "0.1.0"
description = "LLM evaluation and monitoring platform for RAG applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LLMOpsForge" }]
keywords = ["llm", "rag", "evaluation", "monitoring", "mlops"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "jsonschema>=4.21",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Heavy / optional retrieval stack. The project runs without these via
# deterministic fallbacks (see app/rag/embeddings.py and retriever.py).
vectors = [
    "sentence-transformers>=2.6",
    "faiss-cpu>=1.8",
]
dashboard = [
    "streamlit>=1.33",
    "pandas>=2.2",
    "altair>=5.2",
]
openai = ["openai>=1.30"]
openrouter = ["openai>=1.30"]  # OpenRouter speaks the OpenAI protocol
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
llmopsforge = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501", "B008"]  # E501: line length handled by formatter; B008: Typer/FastAPI use defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
